Formating. Still need sleep and image background

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         </button>
                     </div>
                 </nav>
-                
-                <div>
+                <div class="typer">
+                    <p class="im">I'm</p>
                     <p id="text"></p>
-                    <p>|</p>
+                    <p id="cursor">|</p>
                 </div>
             </div>
         </section>
